# beatoraja_play_recommend_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  appspec.yml  buildspec.yml  config.toml  diesel.toml  docker-compose.yml  run.sh
crates/mysql/: cargo.toml  config.toml
crates/mysql/src/: lib.rs  main.rs  models.rs  schema.rs
dev/: Dockerfile
docker/app/: Dockerfile
docker/console/: Dockerfile
migrations/2020-05-12-183551_create_db/: down.sql  up.sql
migrations/2020-05-12-183705_create_users/: up.sql
migrations/2020-05-12-183711_create_score_logs/: down.sql  up.sql
migrations/2020-12-14-153548_create_users/: up.sql
migrations/2020-12-15-011605_create_hashes/: up.sql
mysql/: Cargo.toml
mysql/src/: lib.rs  schema.rs
src/: db.rs  error.rs  filter.rs  handler.rs  main.rs  session.rs
src/handler/: detail.rs  upload.rs
