[package]
name = "beatoraja_play_recommend_server"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }

env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

chrono = "0.4.19"

beatoraja_play_recommend = { git = "https://github.com/katandps/beatoraja_play_recommend.git", rev = "b0a7f457"}
#開発用
#beatoraja_play_recommend = { path = "../beatoraja_play_recommend" }