[package]
name = "beatoraja_play_recommend_server"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
futures = "0.3.8"
anyhow = "1.0.36"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
google-jwt-verify = { version = "0.3.0", features = ["async"] }
r2d2 = "0.8.9"

diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
chrono = "0.4.19"

beatoraja_play_recommend = { git = "https://github.com/katandps/beatoraja_play_recommend.git", rev = "75148853" }
#開発用
#beatoraja_play_recommend = { path = "../beatoraja_play_recommend" }