[package]
name = "beatoraja_play_recommend_server"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.8"

tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
reqwest = { version = "0.10.4", features = ["json"] }

env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

r2d2 = "0.8.9"
bytes = "0.5.6"
http = "0.2.2"

rand = "0.8.0"
rand_chacha = "0.3.0"
bigint = "4.4.3"
base64 = "0.13.0"

diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
chrono = "0.4.19"
redis = "0.19.0"

anyhow = "1.0.36"
thiserror = "1.0.23"

beatoraja_play_recommend = { git = "https://github.com/katandps/beatoraja_play_recommend.git", rev = "e896fc29" }
#開発用
#beatoraja_play_recommend = { path = "../beatoraja_play_recommend" }