[package]
name = "mysql"
version = "0.1.0"
authors = ["katand <katandps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#beatoraja_play_recommend = { git = "https://github.com/katandps/beatoraja_play_recommend.git"}
#開発用
beatoraja_play_recommend = {path = "../..//beatoraja_play_recommend"}
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0"
serde_json = "1.0.53"